[FIX] sap.uxap.ObjectPageSubSection: Negative right margin on mobile corrected
Problem: On mobile, the right margin of `.sapUxAPObjectPageSubSectionAlignContent` is -2rem, resulting in content appearing misaligned on Fiori 3 and Belize.

Solution: Change the right margin to -1rem to make sure content is visualized correctly and aligned to VD spec.

BCP: 2280083286

--- a/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
+++ b/src/sap.uxap/src/sap/uxap/themes/base/ObjectPageSubSection.less
@@ -149,7 +149,7 @@ Doing so will result in less generated CSS, as well as less future maintanance i
 	padding: 0 1rem;
 	.sapUxAPObjectPageSubSectionAlignContent {
 		margin-left: -@sapUiMarginSmall;
-		margin-right: -@sapUiMarginMedium;
+		margin-right: -@sapUiMarginSmall;
 	}
 }
 
